# rOOM

./: Cargo.toml  README.md  build.rs  wrapper.h
.cargo/: config.toml
include/sys/: sysinfo.h
src/: lib.rs
src/ffi/: bindings.rs  mod.rs  safe_wrapper.rs  types.rs
src/linux/: proc.rs  proc_stat.rs
src/oom/: killer.rs  pressure.rs  score.rs  selector.rs
