[package]
name = "rOOM"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of the Linux OOM Killer"
license = "MIT"

[dependencies]
libc = "0.2"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

[build-dependencies]
bindgen = "0.69"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
test-log = "0.2"

[lib]
name = "room"
path = "src/lib.rs"

[[bin]]
name = "room"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false 